refactor(tests): simplify assertions and remove redundant import in FilmorateApplicationTest
Signed-off-by: Sergei Kanchikov <kanchikov.sergey@gmail.com>